2006-07-17  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java:
	created dummy method

2006-07-16  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Output libraries/javalib/tritonus-sound/Makefile.

	* include/Makefile.am: Add kaffe-tritonus.jar to KAFFE_JNI_CLASSPATH.

	* libraries/javalib/Makefile.am.in: (COND_NATIVE_SOUND) Build 
	tritonus when native sound is enabled.

	* libraries/javalib/tritonus-sound/Makefile.am: New file.

	* libraries/javalib/tritonus-sound/META-INF/services/javax.sound.sampled.spi.AudioFileReader
	libraries/javalib/tritonus-sound/META-INF/services/javax.sound.sampled.spi.AudioFileWriter
	libraries/javalib/tritonus-sound/META-INF/services/javax.sound.sampled.spi.FormatConversionProvider
	libraries/javalib/tritonus-sound/META-INF/services/javax.sound.sampled.spi.MixerProvider
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/Alsa.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaCtl.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaCtlCardInfo.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaMixer.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaMixerElement.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaPcm.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaPcmHWParams.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaPcmHWParamsFormatMask.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaPcmSWParams.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaSeq.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaSeqClientInfo.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaSeqEvent.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaSeqPortInfo.java
	libraries/javalib/tritonus-sound/org/tritonus/lowlevel/alsa/AlsaSeqPortSubscribe.java