@@ -277,9 +277,7 @@ EXTRA_DIST= \
 	vmspecific/java/util/zip/ZipOutputStream.java \
 	vmspecific/org/kaffe/jar/ExecJar.java \
 	vmspecific/org/kaffe/jar/ExecJarName.java \
-	vmspecific/org/kaffe/lang/ClassPathReader.java \
 	vmspecific/org/kaffe/lang/PackageHelper.java \
-	vmspecific/org/kaffe/lang/ResourceReader.java \
 	vmspecific/org/kaffe/lang/UNIXProcess.java \
 	vmspecific/org/kaffe/management/Classpath.java \
 	vmspecific/org/kaffe/management/Debug.java \
