@@ -1,3 +1,9 @@
+2006-07-17  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/vmspecific/org/kaffe/lang/ResourceReader.java,
+	libraries/javalib/vmspecific/org/kaffe/lang/ClassPathReader.java:
+	Removed unused classes.
+	
 2006-07-17  Riccardo Mottola <riccardo@kaffe.org>
 
 	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java:
